Cleanup and add eap610 profile