@@ -521,12 +521,6 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
               <argLine>${surefire.jvm.args} ${surefire.jvm.management.args} ${surefire.default-mgmt-serurity.args} -Djava.endorsed.dirs=${project.build.directory}/endorsed</argLine>
-              <excludes>
-                 <!-- # [PLFED-390] PicketLink STS chokes on WS-Policy 1.5 tags -->
-                 <exclude>org/jboss/test/ws/jaxws/samples/wsse/policy/trust/WSTrustPicketLinkTestCase*</exclude>
-                 <!--this broke the WSI-Analyzer-->
-                 <exclude>org/jboss/test/ws/jaxws/samples/wsse/policy/secconv/*TestCase*</exclude>
-              </excludes>
             </configuration>
           </plugin>
         </plugins>
@@ -563,12 +557,6 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
               <argLine>${surefire.jvm.args} ${surefire.jvm.management.args} ${surefire.default-mgmt-serurity.args} -Djava.endorsed.dirs=${project.build.directory}/endorsed</argLine>
-              <excludes>
-                 <!-- # [PLFED-390] PicketLink STS chokes on WS-Policy 1.5 tags -->
-                 <exclude>org/jboss/test/ws/jaxws/samples/wsse/policy/trust/WSTrustPicketLinkTestCase*</exclude>
-                 <!--this broke the WSI-Analyzer-->
-                 <exclude>org/jboss/test/ws/jaxws/samples/wsse/policy/secconv/*TestCase*</exclude>
-              </excludes>
             </configuration>
           </plugin>
         </plugins>
@@ -598,13 +586,6 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
               <argLine>${surefire.jvm.args} ${surefire.jvm.management.args} ${surefire.default-mgmt-serurity.args} -Djava.endorsed.dirs=${project.build.directory}/endorsed</argLine>
-              <excludes>
-                 <!-- # [PLFED-390] PicketLink STS chokes on WS-Policy 1.5 tags -->
-                 <exclude>org/jboss/test/ws/jaxws/samples/wsse/policy/trust/WSTrustPicketLinkTestCase*</exclude>
-                 <!--this broke the WSI-Analyzer-->
-                 <exclude>org/jboss/test/ws/jaxws/samples/wsse/policy/secconv/*TestCase*</exclude>
-                 <exclude>org/jboss/test/ws/jaxws/samples/wsse/policy/basic/SignEncryptGCMTestCase</exclude>
-              </excludes>
             </configuration>
           </plugin>
         </plugins>
@@ -613,10 +594,10 @@
 
 
     <profile>
-      <id>jboss800</id>
+      <id>wildfly800</id>
       <properties>
-        <jboss.version>${jboss800.version}</jboss.version>
-        <jbossws.integration.target>jboss800</jbossws.integration.target>
+        <jboss.version>${wildfly800.version}</jboss.version>
+        <jbossws.integration.target>wildfly800</jbossws.integration.target>
       </properties>
       <dependencies>
         <dependency>
@@ -644,6 +625,51 @@
         </plugins>
       </build>
     </profile>
+
+
+    <!--
+    Name:  EAP 6.1.0.GA
+    -->
+    <profile>
+      <id>eap610</id>
+      <properties>
+        <jbossws.cxf.version>4.1.3.Final-redhat-1</jbossws.cxf.version>
+        <jbossws.shared.testsuite.version>4.0.7.GA-redhat-1</jbossws.shared.testsuite.version>
+        <gnu.getopt.version>1.0.13-redhat-2</gnu.getopt.version>
+        <log4j.version>1.2.16-redhat-2</log4j.version>
+        <jboss720.version>7.2.0.Final</jboss720.version>
+        <ejb.api.version>1.0.1.Final</ejb.api.version>
+        <jaxb.api.version>1.0.3.Final</jaxb.api.version>
+        <jaxws.api.version>2.0.0.Final</jaxws.api.version>
+        <jsr181.api.version>1.0-MR1</jsr181.api.version>
+        <spring.version>3.0.7.RELEASE</spring.version>
+        <picketlink.version>2.1.6.Final-redhat-1</picketlink.version>
+        <org.slf4j.version>1.7.2-redhat-1</org.slf4j.version>
+        <jboss.version>${jboss720.version}</jboss.version>
+        <jbossws.integration.target>jboss720</jbossws.integration.target>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.jboss.as</groupId>
+          <artifactId>jboss-as-webservices-tests-integration</artifactId>
+          <version>${jboss.version}</version>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>${surefire.jvm.args} ${surefire.jvm.management.args} ${surefire.default-mgmt-serurity.args} -Djava.endorsed.dirs=${project.build.directory}/endorsed</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+
+
+
 
     <!--
     Name:  no-jboss-bind-address
